--- a/Fares's Portfolio/index.html
+++ b/Fares's Portfolio/index.html
@@ -137,6 +137,43 @@
             <button class="hidden">show more</button>
         </div>
     </section>
+    <section id="skills" class="skills-section">
+        <h1>My Skills</h1>
+        <p></p>
+        <div class="skills-container">
+            <div class="range">
+                <label for="html">HTML</label>
+                <input type="range" name="html" min="0" max="100" step="1" value="90" disabled>
+                <span></span>
+            </div>
+            <div class="range">
+                <label for="html">CSS/tailwind</label>
+                <input type="range" name="html" min="0" max="100" step="1" value="85" disabled>
+                <span></span>
+            </div>
+            <div class="range">
+                <label for="html">JavaScript/TypeScript</label>
+                <input type="range" name="html" min="0" max="100" step="1" value="80" disabled>
+                <span></span>
+            </div>
+            <div class="range">
+                <label for="html">Java</label>
+                <input type="range" name="html" min="0" max="100" step="1" value="70" disabled>
+                <span></span>
+            </div>
+            <div class="range">
+                <label for="html">JQuery</label>
+                <input type="range" name="html" min="0" max="100" step="1" value="60" disabled>
+                <span></span>
+            </div>
+            <div class="range">
+                <label for="html">React</label>
+                <input type="range" name="html" min="0" max="100" step="1" value="50" disabled>
+                <span></span>
+            </div>
+        </div>
+    </section>
+    
     <script src="JS/gsap.min.js"></script>
     <script src="JS/ScrollTrigger.min.js"></script>
     <script src="JS/TextPlugin.min.js"></script>
