--- a/Fares's Portfolio/index.html
+++ b/Fares's Portfolio/index.html
@@ -1,183 +1,325 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fares Chrayteh</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
-    <script src="https://kit.fontawesome.com/656ab73e56.js" crossorigin="anonymous"></script>
-</head>
-<body>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/656ab73e56.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <div class="collapse-container hidden">
-        <div class="close-btn">
-            <i class="fa-solid fa-close"></i>
-        </div>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#project">Project</a>
-        <a href="#skills">Skills</a>
-        <a href="#blog">Blog</a>
-        <a href="#contact">Contact</a>
+      <div class="close-btn">
+        <i class="fa-solid fa-close"></i>
+      </div>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#project">Project</a>
+      <a href="#skills">Skills</a>
+      <a href="#blog">Blog</a>
+      <a href="#contact">Contact</a>
     </div>
     <nav class="navbar">
-        <div class="logo-container">
-            <i class="fa-solid fa-code"></i>
-            <h1>FaresCH</h1>
-        </div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#project">Project</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <i class="fa-solid fa-grip-lines"></i>
-            </ul>
+      <div class="logo-container">
+        <i class="fa-solid fa-code"></i>
+        <h1>FaresCH</h1>
+      </div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#project">Project</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <i class="fa-solid fa-grip-lines"></i>
+      </ul>
     </nav>
     <section id="home" class="home-section">
-        <div class="home-content">
-            <h1><span>Hi</span>, I'm Fares 👋</h1>
-            <p class="text"></p>
-        </div>
-        <div class="image-container">
-            <img class="my-image" src="images/Fares Picture.jpg">
-        </div>
+      <div class="home-content">
+        <h1><span>Hi</span>, I'm Fares 👋</h1>
+        <p class="text"></p>
+      </div>
+      <div class="image-container">
+        <img class="my-image" src="images/Fares Picture.jpg" />
+      </div>
     </section>
 
     <section id="about" class="about-section">
-            <div class="about-image">
-              <img src="images/Fares Picture.jpg" alt="Fares Chrayteh">
-            </div>
-            <div class="about-text">
-              <h2>About Me</h2>
-              <p>
-                I'm Fares Chrayteh, a passionate front-end developer who loves turning ideas into clean, responsive websites.
-                I focus on writing clean code and creating user-friendly experiences using HTML, CSS, and JavaScript.
-              </p>
-              <p>
-                I’m continuously learning and experimenting with new technologies to sharpen my skills and stay up to date with
-                the latest trends in web development.
-              </p>
-            </div>  
+      <div class="about-image">
+        <img src="images/Fares Picture.jpg" alt="Fares Chrayteh" />
+      </div>
+      <div class="about-text">
+        <h2>About Me</h2>
+        <p>
+          I'm Fares Chrayteh, a passionate front-end developer who loves turning
+          ideas into clean, responsive websites. I focus on writing clean code
+          and creating user-friendly experiences using HTML, CSS, and
+          JavaScript.
+        </p>
+        <p>
+          I’m continuously learning and experimenting with new technologies to
+          sharpen my skills and stay up to date with the latest trends in web
+          development.
+        </p>
+      </div>
     </section>
     <section id="project" class="project-section">
-        <h4>Introducing</h4>
-        <h2>My Creation</h2>
-        <div class="project-category">
-            <button>show categories</button>
-            <button class="hidden">show all</button>
-            <button class="hidden">Portfolios</button>
-            <button class="hidden">Landing pages</button>
-            <button class="hidden">Interactive Projects</button>
-            <button class="hidden">Other Projects</button>
+      <h4>Introducing</h4>
+      <h2>My Creation</h2>
+      <div class="project-category">
+        <button>show categories</button>
+        <button class="hidden">show all</button>
+        <button class="hidden">Portfolios</button>
+        <button class="hidden">Landing pages</button>
+        <button class="hidden">Interactive Projects</button>
+        <button class="hidden">Other Projects</button>
+      </div>
+      <div class="project-container">
+        <div class="card">
+          <img src="images/Fares Picture.jpg" alt="" />
+          <div class="card-content">
+            <h2>Title</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio, placeat.
+            </p>
+          </div>
         </div>
-        <div class="project-container">
-            <div class="card">
-                <img src="images/Fares Picture.jpg" alt="">
-                <div class="card-content">
-                    <h2>Title</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/Fares Picture.jpg" alt="">
-                <div class="card-content">
-                    <h2>Title</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/Fares Picture.jpg" alt="">
-                <div class="card-content">
-                    <h2>Title</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/Fares Picture.jpg" alt="">
-                <div class="card-content">
-                    <h2>Title</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/Fares Picture.jpg" alt="">
-                <div class="card-content">
-                    <h2>Title</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/Fares Picture.jpg" alt="">
-                <div class="card-content">
-                    <h2>Title</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/Fares Picture.jpg" alt="">
-                <div class="card-content">
-                    <h2>Title</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/Fares Picture.jpg" alt="">
-                <div class="card-content">
-                    <h2>Title</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, placeat.</p>
-                </div>
-            </div>
+        <div class="card">
+          <img src="images/Fares Picture.jpg" alt="" />
+          <div class="card-content">
+            <h2>Title</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio, placeat.
+            </p>
+          </div>
         </div>
-        <div class="show-more">
-            <button class="hidden">show more</button>
+        <div class="card">
+          <img src="images/Fares Picture.jpg" alt="" />
+          <div class="card-content">
+            <h2>Title</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio, placeat.
+            </p>
+          </div>
         </div>
+        <div class="card">
+          <img src="images/Fares Picture.jpg" alt="" />
+          <div class="card-content">
+            <h2>Title</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio, placeat.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/Fares Picture.jpg" alt="" />
+          <div class="card-content">
+            <h2>Title</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio, placeat.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/Fares Picture.jpg" alt="" />
+          <div class="card-content">
+            <h2>Title</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio, placeat.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/Fares Picture.jpg" alt="" />
+          <div class="card-content">
+            <h2>Title</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio, placeat.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/Fares Picture.jpg" alt="" />
+          <div class="card-content">
+            <h2>Title</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio, placeat.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="show-more">
+        <button class="hidden">show more</button>
+      </div>
     </section>
     <section id="skills" class="skills-section">
-        <h1>My Skills</h1>
-        <p></p>
-        <div class="skills-container">
-            <div class="range">
-                <label for="html">HTML</label>
-                <input type="range" name="html" min="0" max="100" step="1" value="90" disabled>
-                <span></span>
-            </div>
-            <div class="range">
-                <label for="html">CSS/tailwind</label>
-                <input type="range" name="html" min="0" max="100" step="1" value="85" disabled>
-                <span></span>
-            </div>
-            <div class="range">
-                <label for="html">JavaScript/TypeScript</label>
-                <input type="range" name="html" min="0" max="100" step="1" value="80" disabled>
-                <span></span>
-            </div>
-            <div class="range">
-                <label for="html">Java</label>
-                <input type="range" name="html" min="0" max="100" step="1" value="70" disabled>
-                <span></span>
-            </div>
-            <div class="range">
-                <label for="html">JQuery</label>
-                <input type="range" name="html" min="0" max="100" step="1" value="60" disabled>
-                <span></span>
-            </div>
-            <div class="range">
-                <label for="html">React</label>
-                <input type="range" name="html" min="0" max="100" step="1" value="50" disabled>
-                <span></span>
-            </div>
+      <h1>My Skills</h1>
+      <div class="skills-container">
+        <div class="range">
+          <label for="html">HTML</label>
+          <input
+            type="range"
+            name="html"
+            min="0"
+            max="100"
+            step="1"
+            value="90"
+            disabled
+          />
+          <span></span>
         </div>
+        <div class="range">
+          <label for="html">CSS/tailwind</label>
+          <input
+            type="range"
+            name="html"
+            min="0"
+            max="100"
+            step="1"
+            value="85"
+            disabled
+          />
+          <span></span>
+        </div>
+        <div class="range">
+          <label for="html">JavaScript/TypeScript</label>
+          <input
+            type="range"
+            name="html"
+            min="0"
+            max="100"
+            step="1"
+            value="80"
+            disabled
+          />
+          <span></span>
+        </div>
+        <div class="range">
+          <label for="html">Java</label>
+          <input
+            type="range"
+            name="html"
+            min="0"
+            max="100"
+            step="1"
+            value="70"
+            disabled
+          />
+          <span></span>
+        </div>
+        <div class="range">
+          <label for="html">JQuery</label>
+          <input
+            type="range"
+            name="html"
+            min="0"
+            max="100"
+            step="1"
+            value="60"
+            disabled
+          />
+          <span></span>
+        </div>
+        <div class="range">
+          <label for="html">React</label>
+          <input
+            type="range"
+            name="html"
+            min="0"
+            max="100"
+            step="1"
+            value="50"
+            disabled
+          />
+          <span></span>
+        </div>
+      </div>
     </section>
-    
+    <section id="blog" class="blog-section">
+      <div class="container">
+        <h2 class="section-title">Latest Blog Posts</h2>
+        <div class="blog-grid">
+          <article class="blog-card">
+            <img src="images/Fares Picture.jpg" alt="Blog Thumbnail" />
+            <div class="blog-content">
+              <h3>How I Built My Portfolio</h3>
+              <p>
+                A breakdown of my design process, tech stack, and lessons
+                learned while creating my personal site.
+              </p>
+              <a href="#" class="read-more">Read More →</a>
+            </div>
+          </article>
+
+          <article class="blog-card">
+            <img src="images/Fares Picture.jpg" alt="Blog Thumbnail" />
+            <div class="blog-content">
+              <h3>How I began Programming</h3>
+              <p>
+                My programming journey started with curiosity, exploring HTML & CSS in the early days, 
+                and quickly growing into a passion for JavaScript, React, and building dynamic projects.
+              </p>
+              <a href="#" class="read-more">Read More →</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <footer id="contact" class="footer">
+      <div class="footer-container">
+        <div class="footer-about">
+          <h3>About Me</h3>
+          <p>
+            I’m a Front-End Developer passionate about creating modern and
+            responsive websites.
+          </p>
+        </div>
+
+        <div class="footer-contact">
+          <h3>Contact</h3>
+          <ul>
+            <li>
+              Email:
+              <a href="mailto:fareschrayteh1@gmail.com"
+                >fareschrayteh1@gmail.com</a
+              >
+            </li>
+            <li>Phone: <a href="tel:+96181363597">+961 81 363 597</a></li>
+            <li>Location: Akkar, Lebanon</li>
+          </ul>
+        </div>
+
+        <div class="footer-social">
+          <h3>Follow Me</h3>
+          <a href="https://www.linkedin.com/in/fares-chrayteh-a393b6325/" target="_blank">LinkedIn</a>
+          <a href="https://github.com/FaresCH10" target="_blank">GitHub</a>
+          <a href="#" target="_blank">Instagram</a>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2025 Fares Chrayteh. All Rights Reserved.</p>
+      </div>
+    </footer>
+
     <script src="JS/gsap.min.js"></script>
     <script src="JS/ScrollTrigger.min.js"></script>
     <script src="JS/TextPlugin.min.js"></script>
     <script src="JS/app.js"></script>
-
-</body>
+  </body>
 </html>
